--- a/demo/index.html
+++ b/demo/index.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="./css/common.css">
   <link rel="stylesheet" href="./css/header.css">
   <link rel="stylesheet" href="./css/index.css">
-  <link rel="stylesheet" href="./css/footer.css">
+  <link rel="stylesheet" href="./css/web-end.css">
   <title>Bizplus</title>
 </head>
 
@@ -145,7 +145,7 @@
               </div>
               <div class="btn-box col-xl-2 col-md-4">
                 <div class="btn-wrap">
-                  <a class="btn btn-skew skew-white">View more</a>
+                  <a class="btn ">View more</a>
                 </div>
               </div>
             </div>
@@ -157,7 +157,7 @@
     <!-- serve -->
     <!-- Work -->
     <div class="cards">
-      <div class="card-title">
+      <div class="part-title">
         <h1 class="caps">our services</h1>
         <i>Lorem, Et voluptas molestias consequatur laboriosam, illum itaque id.</i>
         <hr>
@@ -209,7 +209,7 @@
     </div>
     <!-- Work -->
     <div class="cards">
-      <div class="card-title">
+      <div class="part-title">
         <h1 class="caps">our works</h1>
         <i>新着制作実績</i>
         <hr>
@@ -232,9 +232,7 @@
           </div>
           <div class="card-item">
             <div class="item-img ">
-              <img
-                src="./imgs/business/business-woman-working-on-laptop-in-her-office-1080x720.jpg"
-                alt="2">
+              <img src="./imgs/business/business-woman-working-on-laptop-in-her-office-1080x720.jpg" alt="2">
               <div class="mask">
                 <a href="#" class="btn-mask">MORE</a>
               </div>
@@ -246,9 +244,7 @@
           </div>
           <div class="card-item">
             <div class="item-img">
-              <img
-                src="./imgs/business/coffee-laptop-business-work-still-life-1080x720.jpg"
-                alt="3">
+              <img src="./imgs/business/coffee-laptop-business-work-still-life-1080x720.jpg" alt="3">
               <div class="mask">
                 <a href="#" class="btn-mask">MORE</a>
               </div>
@@ -260,9 +256,7 @@
           </div>
           <div class="card-item">
             <div class="item-img">
-              <img
-                src="./imgs/business/team-leader-writing-on-white-board-1080x720.jpg"
-                alt="4">
+              <img src="./imgs/business/team-leader-writing-on-white-board-1080x720.jpg" alt="4">
               <div class="mask-light">
                 <a href="#" class="btn-mask">MORE</a>
               </div>
@@ -274,9 +268,7 @@
           </div>
           <div class="card-item">
             <div class="item-img">
-              <img
-                src="./imgs/business/business-free-stock-photo-1080x720.jpg"
-                alt="5">
+              <img src="./imgs/business/business-free-stock-photo-1080x720.jpg" alt="5">
               <div class="mask-light">
                 <a href="#" class="btn-mask">MORE</a>
               </div>
@@ -288,9 +280,7 @@
           </div>
           <div class="card-item">
             <div class="item-img">
-              <img
-                src="./imgs/business/business-agency-team-working-on-new-ideas-1080x720.jpg"
-                alt="6">
+              <img src="./imgs/business/business-agency-team-working-on-new-ideas-1080x720.jpg" alt="6">
               <div class="mask-light">
                 <a href="#" class="btn-mask">MORE</a>
               </div>
@@ -306,116 +296,267 @@
         <div><button class="btn-dark-blue caps">learn more</button></div>
       </div>
     </div>
-
-    <!-- footer -->
-    <footer class="footer bg-dark-blue">
-      <div class="rel outer mxa x">
-        <section class="container mxa x rel" style="max-width:1360px;">
-          <a href="/" class="footer__logo c-white">
-            <h1>Bizplus</h1>
-          </a>
-          <div class="footer__wrapper">
-            <ul class="footer__links c-white ">
-              <li>
-                <h6 class="caps">Shop</h6>
-                <ul class="footer__sublinks">
-                  <li><a href="#" class="h6">Wall Paint</a></li>
-                  <li><a href="#" class="h6">Trim Paint</a></li>
-                  <li><a href="#" class="h6">Ceiling Paint</a></li>
-                  <li><a href="#" class="h6">Primer</a></li>
-                  <li><a href="#" class="h6">Supplies</a></li>
-                </ul>
-              </li>
-              <li>
-                <h6 class="caps">Explore</h6>
-                <ul class="footer__sublinks">
-                  <li><a href="#" class="h6">Clare Color Genius</a></li>
-                  <li><a href="#" class="h6">Paint Calculator</a></li>
-                  <li><a href="#" class="h6">The Blog</a></li>
-                  <li><a href="#" class="h6">Paint 101</a></li>
-                  <li><a href="#" class="h6">Reviews</a></li>
-                </ul>
-              </li>
-              <li>
-                <h6 class="caps">Account</h6>
-                <ul class="footer__sublinks">
-                  <li><a href="#" class="h6">Manage Account</a></li>
-                  <li><a href="#" class="h6">My Colors</a></li>
-                  <li><a href="#" class="h6">Refer a Friend</a></li>
-                </ul>
-              </li>
-              <li>
-                <h6 class="caps">Support</h6>
-                <ul class="footer__sublinks">
-                  <li><a href="#" class="h6">FAQs</a></li>
-                  <li><a href="#" class="h6">Financing</a></li>
-                  <li><a href="#" class="h6">Contact Us</a></li>
-                  <li><a href="#" class="h6">Warranty</a></li>
-                  <li><a href="#" class="h6">Safety Information</a></li>
-                </ul>
-              </li>
-              <li>
-                <h6 class="caps">Company</h6>
-                <ul class="footer__sublinks">
-                  <li><a href="#" class="h6">Press</a></li>
-                  <li><a href="#" class="h6">Our Company</a></li>
-                  <li><a href="#" class="h6">Our Products</a></li>
-                  <li><a href="#" class="h6">Careers</a></li>
-                  <li><a href="#" class="h6">Affiliate</a></li>
-                  <li><a href="#" class="h6">Design Trade</a></li>
-                </ul>
-              </li>
-            </ul>
-            <div class="footer__newsletter c-white x">
-              <h6 class="caps">Keep up with Bizplus</h6>
-              <p class="h6 my0 sans">A Plus For Your Business.</p>
-              <div class="rel">
-                <form class="newsletter rel bg-dark-blue mt1 is-light">
-                  <label for="email" style="display:none">Email
-                  </label>
-                  <input type="text" class="reader x" aria-label="Email" id="email" name="email"
-                    placeholder="Your email" value="">
-                  <button type="submit" class="abs top right bottom fade-out ">
-                    <i class="fas fa-arrow-right"></i>
-                  </button>
-                </form>
-              </div>
+    <!-- section -->
+    <section class="contact ">
+      <div class="line fc z100">
+        <div class="line-inner fc fw z100">
+          <div class="line-txt txt-c">
+            <div class="txt-item">
+              <h4 class="c-dark">フォームでのお問い合わせ</h4>
+              <p>お見積り依頼やご相談・ご質問は
+                お問い合わせフォームをご活用ください。</p>
+              <a href="#" class="clear-a btn-dark-blue">お問い合わせ</a>
             </div>
           </div>
-        </section>
-      </div>
-    </footer>
-    <footer class="colophon bg-darkest-blue rel ">
-      <div class="rel outer mxa x">
-        <section class="container mxa x rel" style="max-width:1360px">
-          <div class="colophon__wrapper f fw jcb x">
-            <ul class="colophon__social f aic jcc x c-white">
-              <li><a class="fade-out" href="https://facebook.com/clarepaint" target="_blank">
-                  <i class="fab fa-line"></i>
-                </a>
-              </li>
-              <li><a class="fade-out" href="https://twitter.com/clarepaint" target="_blank">
-                  <i class="fab fa-twitter-square"></i>
-                </a></li>
-              <li><a class="fade-out" href="https://instagram.com/clarepaint" target="_blank"><i
-                    class="fab fa-facebook-square"></i></a>
-              </li>
-              <li><a class="fade-out" href="https://pinterest.com/clare_paint" target="_blank"><i
-                    class="fab fa-weixin"></i></a></li>
-            </ul>
-            <ul class="colophon__links f aic jcc fw h6 c-white x ac">
-              <li><span>©
-                  <!-- -->2019
-                  <!-- --> Clare, Inc.</span></li>
-              <li>
-                <a href="/" class="fade-out"> Terms &amp; HZNU</a></li>
-              <li>
-                <a href="/" class="fade-out"> Design by XQ.</a></li>
-            </ul>
+          <div class="line-txt txt-c">
+            <div class="txt-item">
+              <h4 class="c-dark">お電話でのお問い合わせ</h4>
+              <p>お急ぎの方や詳しく話を聞きたい方は
+                お電話ください。</p>
+              <a href="#" class="clear-a" style="font-size: 24px;">電話0120-800-804
+              </a>
+              <div style="font-size: 12px;">受付時間10:00〜18:00</div>
+            </div>
           </div>
-        </section>
+        </div>
       </div>
-    </footer>
+    </section>
+
+    <!-- new -->
+    <div class="news fc">
+      <div class="news-inner">
+        <div class="news-content">
+          <div class="part-title">
+            <h1 class="caps">our news</h1>
+            <i>新着情報.</i>
+            <hr>
+          </div>
+          <div class="news-wrap">
+
+            <div class="news release" style="opacity: 1;">
+              <dl>
+                <dt><span>2018. 4.25</span><span class="new-box"></span></dt>
+                <dd><a href="./news/20190425.html" target="_blank">第2回 ＡＩ・業務自動化 展【春】 2019年5月8日（水）～10日（金）に出展します。</a></dd>
+              </dl>
+            </div>
+
+
+            <div class="news release" style="opacity: 1;">
+              <dl>
+                <dt><span>2019.3.25</span></dt>
+                <dd><a href="http://lp.kaiu-marketing.com/topix/topix_20.html" target="_blank">新サービス「AI AD Optimization
+                    from KaiU」をリリース。</a></dd>
+              </dl>
+            </div>
+
+            <div class="news release" style="opacity: 1;">
+              <dl>
+                <dt><span>2018.12.21</span></dt>
+                <dd><a href="http://lp.kaiu-marketing.com/topix/topix_19.html"
+                    target="_blank">KaiU経由でのコンバージョンが3000万件を突破。2億万回の離脱を抑制。</a></dd>
+              </dl>
+            </div>
+
+            <div class="news release" style="opacity: 1;">
+              <dl>
+                <dt><span>2018. 9.19</span></dt>
+                <dd><a href="https://onlystory.co.jp/stories/other/ages/1409" target="_blank">ONLY
+                    STORY弊社代表清水の取材記事が掲載されました</a></dd>
+              </dl>
+            </div>
+
+
+            <div class="news release" style="opacity: 1;">
+              <dl>
+                <dt><span>2018. 5. 2</span></dt>
+                <dd><a href="https://sns4biz.com/seminar/7105"
+                    target="_blank">5月15日（火）にアライドアーキテクツ（株）様と共催でセミナーを開催いたします。</a></dd>
+              </dl>
+            </div>
+
+            <div class="news release" style="opacity: 1;">
+              <dl>
+                <dt><span>2018. 4.25</span></dt>
+                <dd><a href="./news/20180425.html" target="_blank">Web&amp;デジタル マーケティング EXPO 5/9（水）〜11（金）に出展します。</a>
+                </dd>
+              </dl>
+            </div>
+
+            <div class="news release" style="opacity: 1;">
+              <dl>
+                <dt><span>2018. 2.16</span></dt>
+                <dd><a href="./news/20180216_2.html" target="_blank">ECのミカタにKaiU（回遊）の取材記事が掲載されました</a></dd>
+              </dl>
+            </div>
+
+            <div class="news release" style="opacity: 1;">
+              <dl>
+                <dt><span>2018. 2.16</span></dt>
+                <dd><a href="./news/20180216.html" target="_blank">2月17日（土）12：30〜、千葉テレビ「元木商店
+                    商売繫盛してまっか？」に、当社代表の清水が出演いたします。</a></dd>
+              </dl>
+            </div>
+
+
+            <div class="news release" style="opacity: 1;">
+              <dl>
+                <dt><span>2018. 1. 4</span></dt>
+                <dd><a href="./news/20180104.pdf" target="_blank">KaiU（回遊）の事業拡大を狙い資金調達を実施いたしました。</a></dd>
+              </dl>
+            </div>
+
+            <div class="news release" style="opacity: 1;">
+              <dl>
+                <dt><span>2017.12. 1</span></dt>
+                <dd><a href="http://seas100.com/event2017_en/" target="_blank">12月6日に開催される「ISHIN STARTUP SUMMIT
+                    SINGAPORE 2017」に参加します。</a></dd>
+              </dl>
+            </div>
+            <div class="news release nolink" style="opacity: 1;">
+              <dl>
+                <dt><span>2017.12. 1</span></dt>
+                <dd>12月1日付でスマイキー株式会社からコンバージョンテクノロジー株式会社に社名変更いたしました。</dd>
+              </dl>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- web-end -->
+    <div class="web-end">
+      <!-- map -->
+      <div class="map fc">
+        <div class="map-inner ">
+          <div class="map-container fc aic ">
+            <div class="map-height z100">
+              <div id="map"></div>
+            </div>
+          </div>
+          <div class="map-content z100">
+            <div class="content-text z100">
+              <h2>公司所在地</h2>
+              <p>東京都新宿区富久町1番5号</p>
+              <p>富久町第5服部ビル2階</p>
+              <b>TEL : 03-6709-8260</b>
+              <br>
+              <b>FAX : 03-6709-8261</b>
+              <div><a href="#" class="caps clear-a">info</a></div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- double footer -->
+      <footer class="footer bg-dark-blue">
+        <div class="rel outer mxa x">
+          <section class="container mxa x rel" style="max-width:1360px;">
+            <a href="/" class="footer__logo c-white">
+              <h1>Bizplus</h1>
+            </a>
+            <div class="footer__wrapper">
+              <ul class="footer__links c-white ">
+                <li>
+                  <h6 class="caps">Shop</h6>
+                  <ul class="footer__sublinks">
+                    <li><a href="#" class="h6">Wall Paint</a></li>
+                    <li><a href="#" class="h6">Trim Paint</a></li>
+                    <li><a href="#" class="h6">Ceiling Paint</a></li>
+                    <li><a href="#" class="h6">Primer</a></li>
+                    <li><a href="#" class="h6">Supplies</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <h6 class="caps">Explore</h6>
+                  <ul class="footer__sublinks">
+                    <li><a href="#" class="h6">Clare Color Genius</a></li>
+                    <li><a href="#" class="h6">Paint Calculator</a></li>
+                    <li><a href="#" class="h6">The Blog</a></li>
+                    <li><a href="#" class="h6">Paint 101</a></li>
+                    <li><a href="#" class="h6">Reviews</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <h6 class="caps">Account</h6>
+                  <ul class="footer__sublinks">
+                    <li><a href="#" class="h6">Manage Account</a></li>
+                    <li><a href="#" class="h6">My Colors</a></li>
+                    <li><a href="#" class="h6">Refer a Friend</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <h6 class="caps">Support</h6>
+                  <ul class="footer__sublinks">
+                    <li><a href="#" class="h6">FAQs</a></li>
+                    <li><a href="#" class="h6">Financing</a></li>
+                    <li><a href="#" class="h6">Contact Us</a></li>
+                    <li><a href="#" class="h6">Warranty</a></li>
+                    <li><a href="#" class="h6">Safety Information</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <h6 class="caps">Company</h6>
+                  <ul class="footer__sublinks">
+                    <li><a href="#" class="h6">Press</a></li>
+                    <li><a href="#" class="h6">Our Company</a></li>
+                    <li><a href="#" class="h6">Our Products</a></li>
+                    <li><a href="#" class="h6">Careers</a></li>
+                    <li><a href="#" class="h6">Affiliate</a></li>
+                    <li><a href="#" class="h6">Design Trade</a></li>
+                  </ul>
+                </li>
+              </ul>
+              <div class="footer__newsletter c-white x">
+                <h6 class="caps">Keep up with Bizplus</h6>
+                <p class="h6 my0 sans">A Plus For Your Business.</p>
+                <div class="rel">
+                  <form class="newsletter rel bg-dark-blue mt1 is-light">
+                    <label for="email" style="display:none">Email
+                    </label>
+                    <input type="text" class="reader x" aria-label="Email" id="email" name="email"
+                      placeholder="Your email" value="">
+                    <button type="submit" class="abs top right bottom fade-out ">
+                      <i class="fas fa-arrow-right"></i>
+                    </button>
+                  </form>
+                </div>
+              </div>
+            </div>
+          </section>
+        </div>
+      </footer>
+      <footer class="colophon bg-darkest-blue rel ">
+        <div class="rel outer mxa x">
+          <section class="container mxa x rel" style="max-width:1360px">
+            <div class="colophon__wrapper f fw jcb x">
+              <ul class="colophon__social f aic jcc x c-white">
+                <li><a class="fade-out" href="https://facebook.com/clarepaint" target="_blank">
+                    <i class="fab fa-line"></i>
+                  </a>
+                </li>
+                <li><a class="fade-out" href="https://twitter.com/clarepaint" target="_blank">
+                    <i class="fab fa-twitter-square"></i>
+                  </a></li>
+                <li><a class="fade-out" href="https://instagram.com/clarepaint" target="_blank"><i
+                      class="fab fa-facebook-square"></i></a>
+                </li>
+                <li><a class="fade-out" href="https://pinterest.com/clare_paint" target="_blank"><i
+                      class="fab fa-weixin"></i></a></li>
+              </ul>
+              <ul class="colophon__links f aic jcc fw h6 c-white x ac">
+                <li><span>©
+                    <!-- -->2019
+                    <!-- --> Clare, Inc.</span></li>
+                <li>
+                  <a href="/" class="fade-out"> Terms &amp; HZNU</a></li>
+                <li>
+                  <a href="/" class="fade-out"> Design by XQ.</a></li>
+              </ul>
+            </div>
+          </section>
+        </div>
+      </footer>
+    </div>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous">
@@ -426,8 +567,11 @@
     <script src="https://cdn.bootcss.com/bootstrap/4.0.0/js/bootstrap.min.js"
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
     </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD89pzZjSgZCdOv_STBBR6jSWaObqwGNRM"></script>
+
     <!-- init -->
     <script src="./js/main.js"></script>
+    <script src="./js/map.js"></script>
 </body>
 
 </html>
