--- a/demo/index.html
+++ b/demo/index.html
@@ -33,24 +33,46 @@
       </div>
       <div class="nav-menu ">
         <div class="navbar">
-          <div class="menu-item caps">Home</div>
           <div class="menu-item caps">
-            <span>Information
-              <i class="fas fa-angle-down svg-down"></i>
-            </span>
+            Home
           </div>
-          <div class="menu-item caps">
-            <span>Profile
-              <i class="fas fa-angle-down svg-down"></i>
+          <div class="menu-item caps expand">
+            <span>
+              Information&nbsp;<i class="fas fa-angle-down svg-down"></i>
             </span>
+            <div class="menu-information"></div>
+            <ul>
+              <li><i class="fas fa-arrow-right"></i><a href="#">Management philosophy</a></li>
+              <li><i class="fas fa-arrow-right"></i><a href="#">Representative’s greetings</a></li>
+              <li><i class="fas fa-arrow-right"></i><a href="#">Organization chart</a></li>
+              <li><i class="fas fa-arrow-right"></i><a href="#">Security policy</a></li>
+            </ul>
           </div>
-          <div class="menu-item caps">
-            <span>Benefit
-              <i class="fas fa-angle-down svg-down"></i>
+          <div class="menu-item caps expand">
+            <span>
+              Profile&nbsp;<i class="fas fa-angle-down svg-down"></i>
             </span>
+            <ul>
+              <li><i class="fas fa-arrow-right"></i><a href="#">Profile philosophy</a></li>
+              <li><i class="fas fa-arrow-right"></i><a href="#">Profile greetings</a></li>
+              <li><i class="fas fa-arrow-right"></i><a href="#">Profile chart</a></li>
+              <li><i class="fas fa-arrow-right"></i><a href="#">Profile policy</a></li>
+            </ul>
+          </div>
+          <div class="menu-item caps expand">
+            <span>
+              Benefit&nbsp;<i class="fas fa-angle-down svg-down"></i>
+            </span>
+            <ul>
+              <li><i class="fas fa-arrow-right"></i><a href="#">Benefit philosophy</a></li>
+              <li><i class="fas fa-arrow-right"></i><a href="#">Benefit greetings</a></li>
+              <li><i class="fas fa-arrow-right"></i><a href="#">Benefit chart</a></li>
+              <li><i class="fas fa-arrow-right"></i><a href="#">Benefit policy</a></li>
+            </ul>
           </div>
           <div class="menu-item caps">Recruitment</div>
           <div class="menu-item caps">About</div>
+
         </div>
       </div>
       <div class="nav-right ">
@@ -58,8 +80,9 @@
           <i class="fas fa-search"></i>
         </div>
         <div class="nav-lan ">
-          <span style="padding: 0; margin-right: 5px;">English</span>
-          <i class="fas fa-angle-down svg-down"></i>
+          <span>
+            English&nbsp;<i class="fas fa-angle-down svg-down"></i>
+          </span>
         </div>
       </div>
     </div>
@@ -323,106 +346,133 @@
     </section>
 
     <!-- new -->
-    <div class="news fc">
+    <div class="news-main fc">
+
       <div class="news-inner">
-        <div class="news-content">
-          <div class="part-title">
-            <h1 class="caps">our news</h1>
-            <i>新着情報.</i>
-            <hr>
+        <div class="part-title">
+          <h1 class="caps">our news</h1>
+          <i>新着情報.</i>
+          <hr>
+        </div>
+        <div class="news-content f">
+          <ul class="news-list">
+            <li>
+              <p class="topics-content"><a
+                  href="https://www.ubsc.co.jp/topics/seminar/2019/ubs_1.html">UBS健保システムユUBS健保システムユUBS健保システムユーザ会全国ーザ会全国ーザ会全国総会開催のお知らせ</a></p>
+              <div class="topics-date">
+                <span class="topics-tag"><span>セミナー</span></span><span class="topics-time">2019.04.25</span>
+              </div>
+            </li>
+            <li>
+              <p class="topics-content"><a
+                  href="https://www.ubsc.co.jp/topics/seminar/2019/ubs_1.html">UBS健保システムユーザ会全国総会開催のお知らせ</a></p>
+              <div class="topics-date">
+                <span class="topics-tag"><span>セミナー</span></span><span class="topics-time">2019.04.25</span>
+              </div>
+            </li>
+            <li>
+              <p class="topics-content"><a
+                  href="https://www.ubsc.co.jp/topics/seminar/2019/ubs_1.html">UBS健保システムユーザ会UBS健保システムユーザ会全国全国総会開催のお知らせ</a></p>
+              <div class="topics-date">
+                <span class="topics-tag"><span>セミナー</span></span><span class="topics-time">2019.04.25</span>
+              </div>
+            </li>
+            <li>
+              <p class="topics-content"><a
+                  href="https://www.ubsc.co.jp/topics/seminar/2019/ubs_1.html">UBS健保システムユーザ会全国総会開催のお知UBS健保システムユーザ会全国らせ</a></p>
+              <div class="topics-date">
+                <span class="topics-tag"><span>セミナー</span></span><span class="topics-time">2019.04.25</span>
+              </div>
+            </li>
+            <li>
+              <p class="topics-content"><a
+                  href="https://www.ubsc.co.jp/topics/seminar/2019/ubs_1.html">UBS健保システムユーUBS健保システムユーザ会全国ザ会全国UBS健保システムユーザ会全国総会開催のお知らせ</a></p>
+              <div class="topics-date">
+                <span class="topics-tag"><span>セミナー</span></span> <span class="topics-time">2019.04.25</span>
+              </div>
+            </li>
+            <li>
+              <p class="topics-content"><a
+                  href="https://www.ubsc.co.jp/topics/seminar/2019/ubs_1.html">UBS健保システムユーザUBS健保システムユーザ会全国会全国総会開催のお知らせ</a></p>
+              <div class="topics-date">
+                <span class="topics-tag"><span>セミナー</span></span><span class="topics-time">2019.04.25</span>
+              </div>
+            </li>
+          </ul>
+        </div>
+        <div class="fc">
+            <div><button class="btn-dark-blue caps">learn more</button></div>
           </div>
-          <div class="news-wrap">
-
-            <div class="news release" style="opacity: 1;">
-              <dl>
-                <dt><span>2018. 4.25</span><span class="new-box"></span></dt>
-                <dd><a href="./news/20190425.html" target="_blank">第2回 ＡＩ・業務自動化 展【春】 2019年5月8日（水）～10日（金）に出展します。</a></dd>
-              </dl>
+      </div>
+    </div>
+    <!-- Work -->
+    <div class="cards">
+      <div class="part-title">
+        <h1 class="caps">our team</h1>
+        <i>Lorem, Et voluptas molestias consequatur laboriosam, illum itaque id.</i>
+        <hr>
+      </div>
+      <div class="team fc">
+        <div class="team-inner f">
+          <div class="team-item ">
+            <div class="team-item-content">
+              <div class="ofh">
+                <img src="./imgs/business/business-woman-working-on-laptop-in-her-office-1080x720.jpg" alt="">
+                <div class="mask-light">
+                  <a href="#" class="btn-mask">MORE</a>
+                </div>
+              </div>
+              <div class="item-text">
+                <h3 class="caps"><a href="#" class="clear-a">voluptas</a></h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga cum asperiores commodi recusandae
+                  inventore in nesciunt, rerum odit est voluptatum molestiae officiis magnam deleniti ut esse. Nobis
+                  autem sunt natus
+                  doloribus, porro nihil
+                  eveniet tem!</p>
+              </div>
             </div>
-
-
-            <div class="news release" style="opacity: 1;">
-              <dl>
-                <dt><span>2019.3.25</span></dt>
-                <dd><a href="http://lp.kaiu-marketing.com/topix/topix_20.html" target="_blank">新サービス「AI AD Optimization
-                    from KaiU」をリリース。</a></dd>
-              </dl>
+          </div>
+          <div class="team-item ">
+            <div class="team-item-content">
+              <div class="ofh">
+                <img src="./imgs/business/business-woman-working-on-laptop-in-her-office-1080x720.jpg" alt="">
+                <div class="mask-light">
+                  <a href="#" class="btn-mask">MORE</a>
+                </div>
+              </div>
+              <div class="item-text">
+                <h3 class="caps"><a href="#" class="clear-a">voluptas</a></h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga cum asperiores commodi recusandae
+                  in
+                  doloribus, porro nihil
+                  eveniet tem!</p>
+              </div>
             </div>
-
-            <div class="news release" style="opacity: 1;">
-              <dl>
-                <dt><span>2018.12.21</span></dt>
-                <dd><a href="http://lp.kaiu-marketing.com/topix/topix_19.html"
-                    target="_blank">KaiU経由でのコンバージョンが3000万件を突破。2億万回の離脱を抑制。</a></dd>
-              </dl>
-            </div>
-
-            <div class="news release" style="opacity: 1;">
-              <dl>
-                <dt><span>2018. 9.19</span></dt>
-                <dd><a href="https://onlystory.co.jp/stories/other/ages/1409" target="_blank">ONLY
-                    STORY弊社代表清水の取材記事が掲載されました</a></dd>
-              </dl>
-            </div>
-
-
-            <div class="news release" style="opacity: 1;">
-              <dl>
-                <dt><span>2018. 5. 2</span></dt>
-                <dd><a href="https://sns4biz.com/seminar/7105"
-                    target="_blank">5月15日（火）にアライドアーキテクツ（株）様と共催でセミナーを開催いたします。</a></dd>
-              </dl>
-            </div>
-
-            <div class="news release" style="opacity: 1;">
-              <dl>
-                <dt><span>2018. 4.25</span></dt>
-                <dd><a href="./news/20180425.html" target="_blank">Web&amp;デジタル マーケティング EXPO 5/9（水）〜11（金）に出展します。</a>
-                </dd>
-              </dl>
-            </div>
-
-            <div class="news release" style="opacity: 1;">
-              <dl>
-                <dt><span>2018. 2.16</span></dt>
-                <dd><a href="./news/20180216_2.html" target="_blank">ECのミカタにKaiU（回遊）の取材記事が掲載されました</a></dd>
-              </dl>
-            </div>
-
-            <div class="news release" style="opacity: 1;">
-              <dl>
-                <dt><span>2018. 2.16</span></dt>
-                <dd><a href="./news/20180216.html" target="_blank">2月17日（土）12：30〜、千葉テレビ「元木商店
-                    商売繫盛してまっか？」に、当社代表の清水が出演いたします。</a></dd>
-              </dl>
-            </div>
-
-
-            <div class="news release" style="opacity: 1;">
-              <dl>
-                <dt><span>2018. 1. 4</span></dt>
-                <dd><a href="./news/20180104.pdf" target="_blank">KaiU（回遊）の事業拡大を狙い資金調達を実施いたしました。</a></dd>
-              </dl>
-            </div>
-
-            <div class="news release" style="opacity: 1;">
-              <dl>
-                <dt><span>2017.12. 1</span></dt>
-                <dd><a href="http://seas100.com/event2017_en/" target="_blank">12月6日に開催される「ISHIN STARTUP SUMMIT
-                    SINGAPORE 2017」に参加します。</a></dd>
-              </dl>
-            </div>
-            <div class="news release nolink" style="opacity: 1;">
-              <dl>
-                <dt><span>2017.12. 1</span></dt>
-                <dd>12月1日付でスマイキー株式会社からコンバージョンテクノロジー株式会社に社名変更いたしました。</dd>
-              </dl>
+          </div>
+          <div class="team-item ">
+            <div class="team-item-content">
+              <div class="ofh">
+                <img src="./imgs/business/business-woman-working-on-laptop-in-her-office-1080x720.jpg" alt="">
+                <div class="mask-light">
+                  <a href="#" class="btn-mask">MORE</a>
+                </div>
+              </div>
+              <div class="item-text">
+                <h3 class="caps"><a href="#" class="clear-a">voluptas</a></h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga cum asperiores commodi recusandae
+                  inventore in neofficiis magnam deleniti ut esse. Nobis
+                  autem sun
+                  doloribus, porro nihil
+                  eveniet tem!</p>
+              </div>
             </div>
           </div>
         </div>
       </div>
+      <div class="fc">
+        <div><button class="btn-dark-blue caps">learn more</button></div>
+      </div>
     </div>
-
     <!-- web-end -->
     <div class="web-end">
       <!-- map -->
