--- a/assets/xxy/demo2/index.html
+++ b/assets/xxy/demo2/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <!-- normalize -->
   <link rel="stylesheet" href="./css/normalize.css">
@@ -72,23 +72,39 @@
   </div>
 
   <div class="second-menu">
-      <div class="second-menu-item">
-          <span>Information
+
+    <div class="second-menu-item">
+      <span>Information
+        <i class="fas fa-angle-down svg-down"></i>
+      </span>
+    </div>
+
+    <div class="second-menu-item">
+      <span>Profile
+        <i class="fas fa-angle-down svg-down"></i>
+      </span>
+    </div>
+
+    <div class="second-menu-item">
+      <span>Benefit
+        <i class="fas fa-angle-down svg-down"></i>
+      </span>
+    </div>
+
+    <div class="second-menu-item">Recruitment</div>
+
+    <div class="second-menu-item">About</div>
+      
+    <div class="second-menu-nav">
+        <div class="nav-search">
+            <span style="padding: 0; margin-right: 5px;margin-top:3px;">Search</span>
+            <i class="fas fa-search"></i>
+          </div>
+          <div class="nav-lan">
+            <span style="padding: 0; margin-right: 5px;">English</span>
             <i class="fas fa-angle-down svg-down"></i>
-          </span>
-        </div>
-        <div class="second-menu-item">
-          <span>Profile
-            <i class="fas fa-angle-down svg-down"></i>
-          </span>
-        </div>
-        <div class="second-menu-item">
-          <span>Benefit
-            <i class="fas fa-angle-down svg-down"></i>
-          </span>
-        </div>
-        <div class="second-menu-item">Recruitment</div>
-        <div class="second-menu-item">About</div>
+          </div>
+    </div>
   </div>
 
   <!-- main-content -->
