--- a/demo/index.html
+++ b/demo/index.html
@@ -40,7 +40,7 @@
       </div>
       <div class="nav-menu ">
         <div class="navbar">
-          <div class="menu-item caps">
+          <div class="menu-item caps" i="homepage">
             Home
           </div>
           <div class="menu-item caps expand">
@@ -831,7 +831,8 @@
       </footer>
     </div>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script type="text/javascript" src="./js/jquery.min.js"></script>
+    <script type="text/javascript" src="./js/jquery-3.4.1.js"></script>
+    <script type="text/javascript" src="./js/jquery.i18n.properties.min.js"></script>
     <script src="https://cdn.bootcss.com/popper.js/1.12.9/umd/popper.min.js"
       integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
     </script>
